[package]
name = "qork"
version = "0.1.0"
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]

[dependencies]
chrono = "0.4"
clap = "2.25.1"
hostname = "0.1.3"
log = "0.3.8"
log4rs = { version = "0.7.0", features = ["toml_format"] }
target_info = "0.1.0"
xdg = "2.1.0"

[profile.release]
lto = true
