[package]
name = "qork"
version = "0.1.0"
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
build = "build.rs"
description = "A fast, extensible text editor written in Rust and Python"

[dependencies]
chrono = "0.4"
clap = "2.25.1"
hostname = "0.1.3"
libc = "0.2"
log = "0.3.8"
log4rs = { version = "0.7.0", features = ["toml_format"] }
serde = "1.0.10"
serde_derive = "1.0"
sysinfo = "0.3.13"
toml = "0.4"
xdg = "2.1.0"

[build-dependencies]
built = { git = "https://github.com/lukaslueg/built", branch = "master", features = ["serialized_git"] }

[profile.release]
lto = true
