[package]
name = "qork"
version = "0.1.3"
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
build = "build.rs"
description = "A fast, extensible text editor written in Rust and Python"

[dependencies]
chrono = "0.4"
clap = "2.25.1"
hostname = "0.1.3"
lazy-init = "0.1.1"
libc = "0.2"
log = "0.3.8"
log4rs = { version = "0.7.0", features = ["toml_format"] }
rand = "0.3"
serde = "1.0.10"
serde_derive = "1.0"
tempfile = "2.1.6"
toml = "0.4"
users = "0.5.3"
xdg = "2.1.0"
xi-rope = "0.2.0"

[build-dependencies]
built = "0.2.0"

[profile.release]
lto = true
